Enable anisotropic texture filtering and remove optional checks for pre-2.1 feaures